InternexDev_Sandbox/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Signature__c</fullName>
        <description>User signature as stationaries.</description>
        <label>Signature</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>akritivtlm__Conversation_Create_Permission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conversation Create Permission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>akritivtlm__Country__c</fullName>
        <label>Country</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>akritivtlm__Escalation_Email_Id__c</fullName>
        <label>Escalation Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritivtlm__HDGroupName__c</fullName>
        <label>HDGroupName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritivtlm__Mail_Box_Display_Name__c</fullName>
        <label>Mail Box Display Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>akritivtlm__Process__c</fullName>
        <label>Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>akritivtlm__QueryClassification__c</fullName>
        <label>QueryClassification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritivtlm__RejectPerecentage__c</fullName>
        <label>RejectPerecentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>akritivtlm__Show_Document_In_New_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Document In New Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>akritivtlm__Show_Document__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>akritivtlm__User_Percentage__c</fullName>
        <label>QC Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>